--- a/Course.Controls/Course.Controls.csproj
+++ b/Course.Controls/Course.Controls.csproj
@@ -67,9 +67,16 @@
       <DependentUpon>Instrument.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkeletonScreen.xaml.cs">
+      <DependentUpon>SkeletonScreen.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Instrument.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SkeletonScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
